# candlefish-ai

./: .editorconfig  .env.example  .env.local  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENT_INSTALLATION.md  AGENT_PLATFORM_IMPLEMENTATION.md  AGENT_PLATFORM_IMPLEMENTATION_PLAN.md  ALIGNMENT_MANIFESTO.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURAL_FIXES_COMPLETE.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE_DESIGN.md  BACKEND_ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE_REVIEW_GLOBAL_SETUP.md  CLAUDE_REVIEW_QUICK_REFERENCE.md  CODEOWNERS  COLLABORATION_GRAPHQL_SYSTEM.md  COMPREHENSIVE_REVIEW_DECISION.md  COMPREHENSIVE_SECURITY_AUDIT_2025.md  Candlefish_Codex_Structure.md  DEPLOYMENT_ARCHITECTURE_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_CONSOLIDATION.md  DEPLOYMENT_READINESS_ASSESSMENT.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TESTING_GUIDE.md  Dockerfile  Dockerfile.txt  EXCEL_MIGRATION_ARCHITECTURE.md  EXECUTE_CLEANUP.md  EXECUTIVE_REPORT_CANDLEFISH_PLATFORM_REVIEW.md  FRONTEND_DOCUMENTATION_SITES.md  (+134 more)
ARCHIVE/projects/fogg/calendar/: Dockerfile  Makefile  pyproject.toml  verify_auth.py
ARCHIVE/projects/fogg/calendar/dashboard/: .env.example
ARCHIVE/projects/fogg/calendar/infra/: iam.tf
projects/fogg/calendar/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cloudbuild.yaml  fogg_members.json  introspect_fogg.py  pyproject.toml  run_sync.py  verify_auth.py
projects/fogg/calendar/deploy/: DEPLOYMENT_REPORT_FINAL.md  INSTRUCTIONS_FOR_LESLIE.md  critical-deploy.sh  critical-workflow-orchestrator.py  deployment-configs.yaml  enhanced-agents.py  run-all-deployments.sh
projects/fogg/calendar/infra/: backend.tf  iam.tf
projects/fogg/calendar/src/: __init__.py  adk_agent.py  auth.py  cadence.py  calendar_free_busy.py  calendar_manager.py  calendar_manager_idempotent.py  introspect.py  logging.py  main.py  mcp_server.py  metrics.py  models.py  sync_fogg_calendar.py
projects/fogg/calendar/tests/: __init__.py  test_auth.py  test_auth_refresher.py
(+3994 files in other folders)
